sumo/tests/traci/VariableRetrieval/TrafficLight/errors/UnsupportedVariable/testclient.prog
simstep 48 1
getvariable 162 255 dummy
simstep 49 1
